Skip splunk reporting of unit tests runs.
[ignore-commit-lint]

--- a/scripts/build_automation/bitrise_workflows/tests.yml
+++ b/scripts/build_automation/bitrise_workflows/tests.yml
@@ -166,6 +166,7 @@ workflows:
             zip --quiet -r "$BITRISE_DEPLOY_DIR/coverage.zip" scripts/coverage/citests
     - script:
         title: Report tests
+        run_if: false
         inputs:
         - runner_bin: "/bin/zsh"
         - content: |-
@@ -181,7 +182,6 @@ workflows:
                 "$SPLUNK_ENDPOINT_URL"
 
             tar -cJf "$BITRISE_DEPLOY_DIR/jqresults.json.tar.xz" scripts/coverage/jqresults.json
-        is_always_run: true
     - yarn:
         title: yarn danger ci
         is_always_run: true
