--- a/scripts/build_automation/bitrise_workflows/tests.yml
+++ b/scripts/build_automation/bitrise_workflows/tests.yml
@@ -96,7 +96,7 @@ workflows:
                 -scheme CITests \
                 -sdk iphonesimulator \
                 -configuration Debug \
-                -destination 'platform=iOS Simulator,name=Bitrise iOS default,OS=18.4' \
+                -destination 'platform=iOS Simulator,name=Bitrise iOS default' \
                 COMPILER_INDEX_STORE_ENABLE=NO \
                 build-for-testing |
                 tee $BITRISE_DEPLOY_DIR/raw-xcodebuild.log |
@@ -114,7 +114,7 @@ workflows:
             xcodebuild \
                 -workspace Canvas.xcworkspace \
                 -scheme CITests \
-                -destination 'platform=iOS Simulator,name=Bitrise iOS default,OS=18.4' \
+                -destination 'platform=iOS Simulator,name=Bitrise iOS default' \
                 -resultBundlePath scripts/coverage/citests.xcresult \
                 test-without-building 2>&1 | xcbeautify
     - script:
