--- a/Student/project-ci.yml
+++ b/Student/project-ci.yml
@@ -13,7 +13,7 @@ options:
 settings:
   CLANG_ANALYZER_LOCALIZABILITY_NONLOCALIZED: true
   LOCALIZATION_PREFERS_STRING_CATALOGS: true
-  ENABLE_USER_SCRIPT_SANDBOXING: true
+  ENABLE_USER_SCRIPT_SANDBOXING: false
   CURRENT_PROJECT_VERSION: 0.0.1
   MARKETING_VERSION: 0.0.1
   platform: iOS
