--- a/Core/project.yml
+++ b/Core/project.yml
@@ -16,6 +16,8 @@ settings:
   CLANG_ANALYZER_LOCALIZABILITY_NONLOCALIZED: true
   LOCALIZATION_PREFERS_STRING_CATALOGS: true
   ENABLE_USER_SCRIPT_SANDBOXING: false
+  ASSETCATALOG_COMPILER_GENERATE_SWIFT_ASSET_SYMBOL_EXTENSIONS: false
+  STRING_CATALOG_GENERATE_SYMBOLS: false
   platform: iOS
 packages:
   CombineSchedulers:
