Change project files

--- a/Core/project.yml
+++ b/Core/project.yml
@@ -17,6 +17,8 @@ settings:
   LOCALIZATION_PREFERS_STRING_CATALOGS: true
   ENABLE_USER_SCRIPT_SANDBOXING: false
   ASSETCATALOG_COMPILER_GENERATE_SWIFT_ASSET_SYMBOL_EXTENSIONS: false
+  MODULE_VERIFIER_SUPPORTED_LANGUAGE_STANDARDS: "gnu11 gnu++14"
+  ENABLE_MODULE_VERIFIER: YES
   STRING_CATALOG_GENERATE_SYMBOLS: false
   platform: iOS
 packages:
