fix pipe status index

--- a/scripts/build_automation/bitrise_workflows/tests.yml
+++ b/scripts/build_automation/bitrise_workflows/tests.yml
@@ -117,7 +117,7 @@ workflows:
                 -destination 'platform=iOS Simulator,name=Bitrise iOS default' \
                 -resultBundlePath scripts/coverage/citests.xcresult \
                 test-without-building 2>&1 | xcbeautify
-            XCODEBUILD_EXIT=${PIPESTATUS[0]}
+            XCODEBUILD_EXIT=${pipestatus[1]}
             set -e
             exit $XCODEBUILD_EXIT
     - script:
